# willow-cairosvg-plugin

./: README.md  pyproject.toml
willow_cairosvg_plugin/: __init__.py
