[project]
name = "willow_cairosvg_plugin"
authors = [{name = "Joshua Munn", email = "public@elysee-munn.family"}]
readme = "README.md"
# Read description and version from willow_svg_plugin/__init__.py
dynamic = ["version", "description"]
license = {file = "LICENSE"}
keywords = ["Imaging"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "Willow>=1.5",
    "cairosvg>=2.7.0,<2.8.0"
]

[project.urls]
home = "https://github.com/jams2/willow-cairosvg-plugin"

[project.optional-dependencies]
testing = [
    "black==23.7.0",
    "ruff==0.0.282",
    "pytest==7.4.0",
]

[tool.ruff]
# E501: Line too long
ignore = ["E501"]
target-version = "py38"  # minimum target version
select = [
    "E", # pycodestyle errors
    "F", # pyflakes
    "I", # isort
    "T20", # flake8-print
    "BLE", # flake8-blind-except
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"
